<resources>
    <string name="app_name">沉梦昂志</string>
    <string name="butler">聊天</string>
    <string name="wechatnews">文章</string>
    <string name="girlalbum">美女</string>
    <string name="user">个人</string>
    <string name="setting">设置</string>
    <string name="page_one_text">心之所向,素履以往</string>
    <string name="page_two_text">生如逆旅,一苇以航</string>
    <string name="page_three_text">我不怕千万人阻挡，只怕自己投降</string>
    <string name="start_MainActivity">进入主页</string>
    <string name="btn_login">登录</string>
    <string name="loginName">用户名</string>
    <string name="password">密码</string>
    <string name="rem_loignName">记住密码</string>
    <string name="forget_password">忘记密码?</string>
    <string name="btn_jumpto_register">新用户注册</string>
    <string name="other_login">社交账号直接登录</string>
    <string name="login_app_name">沉梦</string>
    <string name="register_name">用户名</string>
    <string name="register_phone">手机号(仅支持大陆手机号)</string>
    <string name="register_password">密码(不少于6位)</string>
    <string name="btn_register">注册</string>
    <string name="btn_jumpto_login">已有沉梦账号?去登录</string>
    <string name="register_email">邮箱</string>
    <string name="email_test">邮箱验证</string>
    <string name="email_test_clock">此邮件将在120秒后自动失效，请及时完成邮箱激活</string>
    <string name="send_email_success">激活邮件发送成功</string>
    <string name="btn_welcome_cm">欢迎来到沉梦app</string>
    <string name="butler_send">发送</string>
    <string name="edit_user_data">编辑资料</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="user_desc">简介</string>
    <string name="user_age">年龄</string>
    <string name="exit_login">退出登录</string>
    <string name="life_tools">生活小助手</string>
    <string name="confirm_edit">确定修改</string>
    <string name="user_safety">账号与安全</string>
    <string name="cmaz_name">沉梦账号</string>
    <string name="email_is_true">已验证</string>
    <string name="username_password">账号密码</string>
    <string name="edit_password">修改密码</string>
    <string name="original_password">原始密码</string>
    <string name="newPassword">新的密码</string>
    <string name="confirm_newPassword">确定密码</string>
    <string name="now_login">正在登录中</string>
    <string name="camera">拍照</string>
    <string name="photogallery">图库</string>
    <string name="cancel">取消</string>
    <string name="sex">性别</string>
    <string name="exit_now">是否确认退出登录?</string>
    <string name="positiveButton">确认</string>
    <string name="negativeButton">取消</string>
    <string name="forget_password_reset">重置密码</string>
    <string name="forget_password_phone_login">使用手机验证码登录</string>
    <string name="reset_phone_email">请输入邮箱</string>
    <string name="reset_send_code">发送验证码</string>
    <string name="query_delivery">物流查询</string>
    <string name="query_phone_land">手机归属地</string>
    <string name="query_delivery_company">自动识别物流公司</string>
    <string name="query_delivery_code">物流单号</string>
    <string name="btn_query_phone">查询归属地</string>
    <string name="loading_query">正在查询中</string>
    <string name="query_phone_land_success">成功</string>
    <string name="china_mobile">移动</string>
    <string name="query_phone">查询的手机号</string>
    <string name="acitonBar0">机器人和你聊天</string>
    <string name="acitonBar1">精选文章</string>
    <string name="acitonBar2">美女相册</string>
    <string name="acitonBar3">发现</string>
    <string name="acitonBar4">更多</string>
    <string name="butler_start_msg">欢迎来到沉梦app</string>
    <string name="wechat_news_parse_success">请求成功</string>
    <string name="welfare">福利</string>
    <string name="butler_broadcast">机器人语音播报</string>
    <string name="life">生活</string>
    <string name="life_chat_text">即时聊天</string>
    <string name="friend_desc">个性签名</string>
    <string name="send_msg">发消息</string>
    <string name="send">发送</string>
    <string name="isloading">加载中...</string>
    <string name="del">删除</string>
    <string name="cm_username">沉梦号:</string>
    <string name="stick">置顶聊天</string>
    <string name="app_friend">添加朋友</string>
    <string name="empty" />
    <string name="new_friend">新的朋友</string>
    <string name="add">添加</string>
    <string name="add_friend">添加好友</string>
    <integer name="default_age">188</integer>
</resources>
