<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center"
    android:focusable="true"
    android:id="@+id/register_linearlayout"
    android:focusableInTouchMode="true"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="70sp"
        android:text="@string/login_app_name"
        android:id="@+id/register_app_name"/>
    <EditText
        android:drawableStart="@drawable/username"
        android:lines="1"
        android:textSize="25sp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/register_name"
        android:id="@+id/register_name"/>
    <EditText
        android:drawableStart="@drawable/email"
        android:lines="1"
        android:textSize="25sp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/register_email"
        android:inputType="textEmailAddress"
        android:id="@+id/register_email"/>
    <com.example.administrator.cmazxiaoma.view.XEditText
        android:drawableEnd="@drawable/novisi"
        android:drawableStart="@drawable/pwd"
        android:lines="1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/register_password"
        android:textSize="25sp"
        android:hint="@string/register_password"/>
    <Button
        android:id="@+id/btn_register"
        android:textSize="22sp"
        android:layout_marginTop="20dp"
        android:layout_width="300dp"
        android:text="@string/btn_register"
        android:enabled="false"
        android:background="@drawable/btn_bg"
        android:textColor="@android:color/white"
        android:layout_height="wrap_content" />
    <Button
        android:layout_marginTop="30dp"
        android:id="@+id/btn_jumpto_login"
        android:textSize="20sp"
        android:textColor="@color/darkgray"
        android:background="@color/transparent"
        android:text="@string/btn_jumpto_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>