<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_relativelayout">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center">
    <TextView
        android:text="@string/login_app_name"
        android:textSize="70sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:id="@+id/app_name"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/usernameWrapper"
            android:layout_width="300dp"
            android:layout_height="wrap_content">
      <EditText
        android:drawableLeft="@drawable/username"
        android:textSize="25sp"
          android:drawableStart="@drawable/username"
        android:layout_marginBottom="10dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/loginName"
        android:id="@+id/login_name"
        android:lines="1"/>
     </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordWrapper"
            android:layout_width="300dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/password"
            android:layout_height="wrap_content">
    <EditText
        android:drawableStart="@drawable/pwd"
        android:drawableLeft="@drawable/pwd"
        android:textSize="25sp"
        android:lines="1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:id="@+id/login_password"/>
        </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:textColor="@color/darkgray"
        android:layout_gravity="right"
        android:textSize="20sp"
        android:text="@string/rem_loignName"
        android:id="@+id/rem_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:textSize="22sp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn_login"
        android:text="@string/btn_login"
        android:enabled="false"
        android:textColor="@android:color/white"
        android:background="@drawable/btn_bg"/>
        <Button
            android:textColor="@color/darkgray"
            android:textSize="20sp"
            android:background="@color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_jumpto_register"
            android:text="@string/btn_jumpto_register"/>
    <Button
        android:textColor="@color/darkgray"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:id="@+id/forget_password"
        android:text="@string/forget_password"/>
        <TextView
            android:id="@+id/login_other_text"
            android:textColor="@color/darkgray"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/other_login"/>

    </LinearLayout>

</LinearLayout>