<?xml version="1.0" encoding="utf-8" ?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
  <LinearLayout
      android:id="@+id/user_linearlayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@drawable/user_bg">
      <de.hdodenhof.circleimageview.CircleImageView
          android:id="@+id/user_image"
          android:layout_width="90dp"
          android:layout_height="90dp"
          android:src="@drawable/add_pic"
          app:civ_border_width="2dp"
          app:civ_border_color="@android:color/transparent"/>
      <TextView
          android:gravity="center"
          android:layout_width="80dp"
          android:layout_height="30dp"
          android:id="@+id/edit_user_data"
          android:layout_marginTop="20dp"
          android:textColor="@android:color/white"
          android:background="@drawable/btn_bg"
          android:text="@string/edit_user_data"
          android:textSize="16sp"
          />
    </LinearLayout>

    <!--用户名-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">
      <android.support.v7.widget.AppCompatImageView
          app:srcCompat="@drawable/username"
          android:layout_width="24dp"
          android:layout_height="wrap_content"
          />
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/loginName"
          android:textSize="16sp"/>
      <EditText
          android:enabled="false"
          android:layout_marginStart="5dp"
          android:textSize="20sp"
          android:lines="1"
          android:id="@+id/edit_username"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>
    </LinearLayout>

    <!--性别-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">
      <android.support.v7.widget.AppCompatImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:srcCompat="@drawable/sex"/>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/sex"
          android:textSize="16sp"/>
      <CheckBox
          android:textColor="@color/colorPrimary"
          android:id="@+id/male"
          android:textSize="22sp"
          android:layout_marginStart="5dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/male"/>
      <CheckBox
          android:textColor="@color/colorPrimary"
          android:id="@+id/female"
          android:text="@string/female"
          android:textSize="22sp"
          android:layout_marginStart="20dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content" />
    </LinearLayout>

    <!--年龄-->
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:padding="5dp">
    <android.support.v7.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/age"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_age"
        android:textSize="16sp"/>
    <EditText
        android:inputType="number"
        android:textSize="20sp"
        android:lines="1"
        android:layout_marginStart="5dp"
        android:id="@+id/edit_user_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>

    <!--描述-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">
      <android.support.v7.widget.AppCompatImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:srcCompat="@drawable/desc"/>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/user_desc"
          android:textSize="16sp"/>
      <EditText
          android:textSize="20sp"
          android:layout_marginStart="5dp"
          android:id="@+id/edit_user_desc"
          android:layout_width="match_parent"
          android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:visibility="invisible"
        android:id="@+id/btn_confirm_edit"
        android:textColor="@android:color/white"
        android:background="@drawable/btn_bg"
        android:textSize="20sp"
        android:text="@string/confirm_edit"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btn_exit_login"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/white"
        android:background="@drawable/btn_bg"
        android:textSize="20sp"
        android:text="@string/exit_login"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content" />
</LinearLayout>
</ScrollView>