<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="bottom|center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/forget_password_reset"
        android:layout_width="300dp"
        android:background="@android:color/transparent"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:text="@string/forget_password_reset"
        android:layout_height="wrap_content" />
    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/forget_password_phone_login"
        android:background="@android:color/transparent"
        android:textColor="@color/colorPrimary"
        android:layout_width="300dp"
        android:textSize="20sp"
        android:text="@string/forget_password_phone_login"
        android:layout_height="wrap_content" />
    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/forget_password_cancel"
        android:background="@android:color/transparent"
        android:textColor="@color/colorPrimary"
        android:layout_width="300dp"
        android:textSize="20sp"
        android:text="@string/cancel"
        android:layout_height="wrap_content" />
</LinearLayout>