<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:showDividers="middle|end"
    android:divider="@drawable/divider">
    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/cmaz_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"/>
        </LinearLayout>
    <!--邮箱-->
    <LinearLayout
        android:padding="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:padding="5dp"
            android:orientation="vertical"
            android:layout_width="200dp"
            android:layout_height="wrap_content">
        <TextView
            android:textColor="@android:color/background_dark"
            android:textSize="16sp"
            android:text="@string/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
            <TextView
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edit_email"/>
        </LinearLayout>
        <TextView
            android:padding="10dp"
            android:layout_marginStart="35dp"
            android:textSize="16sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/email_is_true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_marginStart="20dp"
            android:src="@drawable/safety_true"
            android:layout_width="32dp"
            android:layout_height="32dp" />
    </LinearLayout>
<!--账号密码-->
    <LinearLayout
        android:id="@+id/edit_password_lin"
        android:padding="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="200dp"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@android:color/background_dark"
            android:textSize="16sp"
            android:text="@string/username_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_password"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>