<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_gravity="center"
            android:textSize="25sp"
            android:id="@+id/query_delivery_company"
            android:paddingLeft="25dp"
            android:text="@string/query_delivery_company"
            android:layout_width="300dp"
            android:layout_height="50dp"/>
        <EditText
            android:inputType="number"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:id="@+id/query_delivery_code"
            android:paddingLeft="25dp"
            android:hint="@string/query_delivery_code"
            android:layout_width="300dp"
            android:layout_height="50dp"/>
        <Button
            android:textSize="20sp"
            android:enabled="false"
            android:id="@+id/btn_query_delivery"
            android:background="@drawable/btn_bg"
            android:text="@string/query_delivery"
            android:textColor="@android:color/white"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="wrap_content"/>
        </LinearLayout>
    <ListView
        android:layout_marginTop="10dp"
        android:id="@+id/query_delivery_mlistView"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>
</LinearLayout>