<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_password_lin"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--老密码-->
<LinearLayout
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:gravity="center"
    android:orientation="horizontal"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">
    <TextView
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/original_password"/>
    <EditText
        android:textSize="25sp"
        android:inputType="textPassword"
        android:lines="1"
        android:layout_marginStart="10dp"
        android:id="@+id/old_password"
        android:layout_width="220dp"
        android:layout_height="wrap_content" />
</LinearLayout>

    <!--新密码-->
    <LinearLayout
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:padding="10dp"
            android:textSize="22sp"
            android:textColor="@android:color/black"
            android:text="@string/newPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <com.example.administrator.cmazxiaoma.view.XEditText
            android:textSize="25sp"
            android:inputType="textPassword"
            android:drawableEnd="@drawable/novisi"
            android:lines="1"
            android:id="@+id/new_password"
            android:layout_marginStart="10dp"
            android:layout_width="220dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
<!--确定密码-->
    <LinearLayout
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:padding="10dp"
            android:textSize="22sp"
            android:textColor="@android:color/black"
            android:text="@string/confirm_newPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <com.example.administrator.cmazxiaoma.view.XEditText
            android:inputType="textPassword"
            android:lines="1"
            android:textSize="25sp"
            android:id="@+id/new_confirm_password"
            android:layout_marginStart="10dp"
            android:layout_width="220dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:id="@+id/btn_edit_password"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:text="@string/confirm_edit"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_bg"
        android:layout_width="300dp"
        android:layout_height="wrap_content" />

</LinearLayout>