<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:showDividers="middle"
    android:divider="@drawable/divider"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/friend_data_head"
            android:layout_width="60dp"
            android:layout_height="60dp" />
        <LinearLayout
            android:padding="20dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="20sp"
                android:text="@string/cm_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="1234567"
                android:id="@+id/friend_data_username"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView
                android:id="@+id/friend_data_sex"
                android:paddingLeft="5dp"
                android:src="@drawable/man"
                android:layout_width="26dp"
                android:layout_height="26dp" />
        </LinearLayout>
    </LinearLayout>

    <!--年龄-->
    <View
        android:background="#f1f1f1"
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    <LinearLayout
        android:padding="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@android:color/black"
            android:text="@string/user_age"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:paddingLeft="50dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:id="@+id/friend_data_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!--个性签名-->

    <!--年龄-->
    <View
        android:background="#f1f1f1"
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    <LinearLayout
        android:padding="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@android:color/black"
            android:text="@string/friend_desc"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:paddingLeft="20dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:id="@+id/friend_data_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:background="#f1f1f1"
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    <!--发消息-->
    <LinearLayout
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_send_msg"
            android:text="@string/send_msg"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_bg"
            android:layout_width="300dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>